<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PicNews</string>
    <string name="icon_calendar">&#xf073;</string>
    <string name="icon_camera">&#xf030;</string>
    <string name="icon_account">&#xf007;</string>
    <string name="icon_map">&#xf041;</string>
    <string name="icon_home">&#xf015;</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="miasta">Wybierz miasto:</string>
    <string-array name="listCategories">
        <item>Wybierz tag</item>
        <item>Sport</item>
        <item>Konferencja</item>
        <item>Konkurs</item>
        <item>Koncert</item>
        <item>Wykład</item>
        <item>Impreza</item>
        <item>Warsztaty</item>
    </string-array>
    <string-array name="listLocations">
        <item>Wydział 1</item>
        <item>Wydział 2</item>
        <item>Wydział 3</item>
        <item>Wydział 4</item>
        <item>Wydział 5</item>
        <item>Wydział 6</item>
        <item>Wydział 7</item>
    </string-array>
    <string-array name="rivers">
        <item >Toruń</item>
        <item >Bydgoszcz</item>
        <item >Poznań</item>
        <item >Gdańsk</item>
        <item >Gdynia</item>
        <item >Wrocław</item>
        <item >Warszawa</item>
        <item >Kraków</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="home">HOME</string>
    <string name="map">MAP</string>
    <string name="news">NEWS</string>
    <string name="account">MY</string>
    <string name="stringrejestracja">Zarejestruj</string>
    <string name="kontynuujfacebook">Kontynuuj przez Facebook\'a</string>
    <string name="stringlogowanie">Zaloguj</string>
    <string name="stringbezlogowania">Przejdź do aplikacji</string>
    <string name="stringemail">Adres e-mail</string>
    <string name="stringhaslo">Hasło</string>
    <string name="stringzaloguj">Zaloguj</string>
    <string name="stringzarejestruj">Zarejestruj się w aplikacji PicNews!</string>
    <string name="stringlogin">Login</string>
    <string name="stringhaslopowtorz">Powtórz hasło</string>
    <string name="stringtyp">Zarejestruj się jako:</string>
    <string name="stringDziennikarz">Dziennikarz</string>
    <string name="stringUzytkownik">Użytkownik</string>
    <string name="stringedycja">Edytuj profil</string>
    <string name="stringwymyslonylogin">Lamia</string>
    <string name="stringocenauzytkownika">Ocena</string>
    <string name="stringliczbapostowusunietych">Posty usunięte</string>
    <string name="stringliczbapostow">Liczba postów:</string>
    <string name="stringzglosnaduzycie">Zgłoś nadużycie</string>
    <string name="stringplus"> + </string>
    <string name="stringminus"> - </string>
    <string name="postLoc"> miejsce: </string>
    <string name="postDate"> data: </string>
    <string name="stringczytajdalej">czytaj dalej</string>
    <string name="stringautor">autor: </string>
    <string name="stringbuttondodaj">Dodaj Newsa</string>
    <string name="stringChangeLocation">Wybierz lokalizację z listy</string>
    <string name="stringChangeLocation2">Znajdź lokalizację na mapie</string>    
    <string name="stringPrompt1">Kategorie</string>
    <string name="stringPrompt2">Lokalizacja</string>
    <string name="stringEventDate">Data wydarzenia</string>
    <string name="editPicture">Zmień zdjęcie profilowe</string>
    <string name="choosePicture">Wybierz zdjęcie</string>
    <string name="favouriteTags">Ulubione kategorie</string>
    <string name="acceptChanges">Zapisz zmiany</string>
    <string name="popup1">"Ulubione kategorie"</string>
    <string name="OK">"OK"</string>
    <string name="szukaj">"Wyszukaj"</string>
    <string name="popup2">"Obserwowani użytkownicy"</string>
    <string name="stringregulamin">Rejestrując się potwierdzasz, że zapoznałeś się z <u>regulaminem</u> oraz akceptujesz wszelkie jego warunki</string>
    <string name="LogOut">"Wyloguj"</string>
    <string name="deletePost">"Usuń</string>
    <string name="stringrej">Rejestracja</string>
    <string name="stringlog">Logowanie</string>
    <string name="server">http://158.75.2.10:10000/PicNewsApp/rest/main</string>
    <string name="server2">http://192.168.1.18:8080/RestWebServiceDemo/rest/main</string>
    <string name="server3">http://192.168.1.18:8080/PicNewsApp/rest/main</string>
</resources>
