<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:apk="http://schemas.android.com/apk/res-auto"
    tools:context="pl.example.apk.MainActivity" >
    
  <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/computer"
        android:showAsAction="always"
        apk:showAsAction="always" />
 
    <item
        android:id="@+id/map"
        android:title="@string/map"
         android:icon="@drawable/gamepad"
        android:showAsAction="always"
        apk:showAsAction="always" />
 
    <item
        android:id="@+id/news"
        android:title="@string/news"
         android:icon="@drawable/camera"
        android:showAsAction="always"
        apk:showAsAction="always" />
 
    <item
        android:id="@+id/konto"
        android:title="@string/account"
         android:icon="@drawable/phone"
       android:showAsAction="always"
        apk:showAsAction="always" />


</menu>
