<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
 	android:paddingRight="10dp"
 	android:background="@drawable/gaz3"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/buttonRegistration"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:background="#CC009900"
        android:text="@string/stringrejestracja" />

    <Button
        android:id="@+id/buttonRegistrationFacebook"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/buttonRegistration"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="#CC003399"
        android:text="@string/kontynuujfacebook"
        android:textColor="#fbfbfb" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/buttonRegistrationFacebook"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="#CC009900"
        android:text="@string/stringlogowanie" />

    <Button
        android:id="@+id/buttonWithoutLogin"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/buttonLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="#CC009900"
        android:text="@string/stringbezlogowania" />

</RelativeLayout>
