<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewEditPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:text="@string/editPicture" />

    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    
   <ImageView
       android:id="@+id/imageIcon"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginRight="10dp"
       android:layout_marginTop="15dp"
       android:src="@drawable/gaz3min" />
    
    <Button
        android:id="@+id/buttonEditPicture"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/choosePicture" />
    
    </LinearLayout>

    <TextView
        android:id="@+id/textViewYourTags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:text="@string/favouriteTags" />

    <ListView 
        android:id="@+id/listOfTags" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonAcceptChanges"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/acceptChanges" />

</LinearLayout>
