<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/posty"
        	android:layout_width="match_parent"
        	android:orientation="horizontal"
        	android:layout_height="match_parent">
        
             <ImageView
            android:id="@+id/zdjeciedziennikarza"
            android:layout_width="120dp"
            android:layout_height="200dp" />
             
             <LinearLayout
                 android:id="@+id/postycd"
        		android:layout_width="match_parent"
        		android:orientation="vertical"
        		android:layout_height="match_parent">
        		
                 <TextView 
                 android:id="@+id/trescPosta"
                 android:layout_marginLeft="10dp"
                 android:layout_width="wrap_content"
            	 android:layout_height="wrap_content"
                 />
                 
                 
                 
                 <LinearLayout              
            		android:id="@+id/podpis"
        			android:layout_width="match_parent"
        			android:layout_height="0dip"
        			android:layout_weight="1"
        			android:gravity="center|bottom"
        			android:orientation="horizontal">
                     
                    <TextView 
                		android:id="@+id/plus"
                		android:layout_width="wrap_content"
            			android:layout_height="wrap_content"
            			android:layout_weight="1"
           				android:gravity="center_horizontal"
            			android:text="@string/stringplus"
                 	/>
                     
                    <TextView 
                		android:id="@+id/minus"
                		android:layout_width="wrap_content"
            			android:layout_height="wrap_content"
            			android:layout_weight="1"
            			android:gravity="center_horizontal"
            			android:text="@string/stringminus"
                 	/>
                     
                    <TextView 
                		android:id="@+id/zglosnaduzycie"
                		android:layout_width="wrap_content"
            			android:layout_height="wrap_content"
            			android:layout_weight="1"
            			android:gravity="center_horizontal"
            			android:text="@string/stringzglosnaduzycie"
                 	/>
                    <TextView 
                        android:id="@+id/czytajdalej" 
                        android:layout_width="wrap_content" 
                        android:layout_height="wrap_content" 
                        android:layout_weight="1"
            			android:gravity="center_horizontal" 
                        android:text="@string/stringczytajdalej" />
                     
             	</LinearLayout>
             	
             </LinearLayout>
    

</LinearLayout>
