<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="15dp"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/post"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="19sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/stringautor" 
        android:layout_marginRight="10dp"
        android:textSize="15sp"
        android:layout_gravity="right"/>
    
    <LinearLayout              
            		android:id="@+id/extras"
        			android:layout_width="match_parent"
        			android:layout_height="0dip"
        			android:layout_weight="1"
        			android:layout_marginTop="10dp"
        			android:gravity="center|bottom"
        			android:layout_marginBottom="10dp"
        			android:orientation="horizontal">
                     
                    <TextView 
                		android:id="@+id/ratePlus"
                		android:layout_width="wrap_content"
            			android:layout_height="wrap_content"
            			android:layout_weight="1"
           				android:gravity="center_horizontal"
           				android:textColor="#CC009900"
           				android:textSize="17sp"
            			android:text="@string/stringplus"
                 	/>
                     
                    <TextView 
                		android:id="@+id/rateMinus"
                		android:layout_width="wrap_content"
            			android:layout_height="wrap_content"
            			android:layout_weight="1"
            			android:textSize="22sp"
            			android:textColor="#CC009900"
            			android:gravity="center_horizontal"
            			android:text="@string/stringminus"
                 	/>
                     
                    <TextView 
                		android:id="@+id/rateReport"
                		android:layout_width="wrap_content"
            			android:layout_height="wrap_content"
            			android:layout_weight="1"
            			android:textColor="#CC009900"
            			android:textSize="15sp"
            			android:gravity="center_horizontal"
            			android:text="@string/stringzglosnaduzycie"
                 	/>
                    
                     
             	</LinearLayout>
             

</LinearLayout>
