<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/uzytkowniklayout"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/zdjeciedziennikarza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="200dp"
            android:maxWidth="100dp"
            android:src="@drawable/gaz3min" />
        
        <TextView 
            android:id="@+id/textViewloginuzytkownika" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:text="@string/stringwymyslonylogin" 
            android:textAppearance="?android:attr/textAppearanceLarge" />



    </LinearLayout>

 	<LinearLayout
     	android:id="@+id/liczniklayout"
     	android:layout_width="fill_parent"
     	android:layout_marginLeft="10dp"
     	android:layout_marginRight="10dp"
     	android:orientation="horizontal"
     	android:layout_height="wrap_content">
        
     	<LinearLayout
     		android:id="@+id/liczniklayout1"
     		android:layout_width="wrap_content"
     		android:orientation="vertical"
     		android:gravity="center"
     		android:padding="15dp"
     		android:layout_height="wrap_content">
            
     	    <TextView
                android:id="@+id/textViewlicznikpostow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stringliczbapostow"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />
     	    
     	     <TextView
                android:id="@+id/textlicznikpostow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stringliczbapostow"
                android:gravity="center" />     	    
     	    
     
 		</LinearLayout>
 		
     	<LinearLayout
     		android:id="@+id/liczniklayout2"
     		android:layout_width="wrap_content"
     		android:orientation="vertical"
     		android:gravity="center"
     		android:padding="15dp"
     		android:layout_height="wrap_content">
     	    
     	    <TextView
                android:id="@+id/textViewlicznikpostowusunietych"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/stringliczbapostow"
                android:textAppearance="?android:attr/textAppearanceLarge" />
     	
     	    
     	   
     	    
     	    <TextView
                android:id="@+id/textlicznikpostowusunietych"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stringliczbapostowusunietych"
                android:gravity="center" />
     	    
     	    
     
 		</LinearLayout>
 		
     	<LinearLayout
     	    android:id="@+id/liczniklayout3"
     		android:layout_width="wrap_content"
     		android:orientation="vertical"
     		android:padding="15dp"
     		android:gravity="center"
     		android:layout_height="wrap_content">
     	    
     	    <TextView
                android:id="@+id/textViewlicznikoceny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/stringliczbapostow"
                android:textAppearance="?android:attr/textAppearanceLarge" />
     	    
     	    <TextView
                android:id="@+id/textlicznikoceny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stringocenauzytkownika"
                android:gravity="center" />
     	    
     	</LinearLayout>
     
 	</LinearLayout>

    
</LinearLayout>
